--- a/cortex/gui/static/styles.css
+++ b/cortex/gui/static/styles.css
@@ -1,10 +1,10 @@
 body {
 	background-color: #f0e2c8;
-	text-align: left;
+	text-align: center;
 	color: #B32E07;
 }
 * {
-	font-family: 'Josefin Sans';
+	font-family: 'Comic Sans MS', cursive, sans-serif;
 }
 a {
 	color: #629ebb;
@@ -19,7 +19,7 @@ table {
     border-collapse: collapse;
 }
 
-tr:hover {
+td:hover {
     background-color: #f5f5f5;
 }
 
