--- a/cortex/gui/templates/user.html
+++ b/cortex/gui/templates/user.html
@@ -36,7 +36,8 @@
 	<h3 align="center"> Feelings Graphs</h3>
 	<h4 align="center"> click on points in the graph to see what the user was seeing at every point.
 	<br>
-	This way, you can know what caused each change in his feelings.</h4>
+	This way, you can know what caused each change in his feelings. <br>
+	Inside each image you will see its' exact timestamp.</h4>
 	<table align="center">
 	{% for i in range(0, graphs_names|length, 2) %}
 		<tr>
